js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-function-return-import-defer-script-code-valid.js
function
fn
(
)
{
return
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
reportCompare
(
0
0
)
;
