js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
